/*
 * $Id: ChangeLog,v 1.3667 2004/12/10 23:42:35 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-12-11 01:30 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
  * xharbour/include/hbdefs.h
  * xharbour/include/hbstack.h
   * changed the multi command macro definitions to use do {...} while(0)
     for safe use in any C statement

  * xharbour/source/vm/hvm.c
    * some other optimisations and some of them suggested by Paul - thanks.

  * xharbour/source/rtl/gtcrs/gtcrs.h
    * formatting

  * xharbour/source/rdd/dbf1.c
   ! fixed the bug in pack I introduced in previous commit

  * xharbour/source/rdd/dbffpt/dbffpt1.c
   ! fixed opening FPT files in READONLY mode on POSIX systems

2004-12-10 21:25 UTC-300 Eduardo Fernandes <modalsist@yahoo.com.br>

  * utils/hbmake/hbmake.prg
  * utils/hbmake/hbmutils.prg
    ! hbct.lib, hbctmt.lib, hbtip.lib and hbtipmt were renamed to
      ct.lib, ctmt.li tip.lib and tipmt.lib respectively, in accordance
      with recent changes. Now these libs will be compiled together with
      default libs and not with external libs. Please, recreate yours
      *.bc makefiles to avoid errors.

2004-12-11 11:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/winos.prg
    - change EnableOpLocksForceClose => EnableOpLockForceClose

2004-12-10 00:40 UTC-3 Marcelo Lombardo <marcelo@xharbour.com.br>
  * include/hbsetup.h
    + Added support for HP-UX 11.xx 64 bits
  * make_gnu.sh
    + Fixed default install folder to self (Unix fans, pls don't kill me :-)
  * source/rtl/gtcrs/gtcrs.h
    + Added support for HP-UX 11.xx 64 bits
  + config/hpux/dir.cf
  + config/hpux/gcc.cf
  + config/hpux/global.cf
  + config/hpux/install.cf
    + Added support for HP-UX 11.xx 64 bits
  + make_hp.sh
    + Added handy hpux setup file
